--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,24 @@
-body {
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap') ;
+
+*{
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+
+body {
+  font-family: 'Poppins', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: aquamarine;
+  align-items: center;
+  justify-content: center;
+  min-height: 100vh;
+  display: flex;
+  background: url(components/assests/neom-z4ELCkNmnz0-unsplash.jpg) no-repeat;
+  background-position: center;
+  background-size: cover;
 }
 
 code {
